; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-clps711x/extr_irq.c_int2_unmask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-clps711x/extr_irq.c_int2_unmask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INTMR2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @int2_unmask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @int2_unmask(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @INTMR2, align 4
  %5 = call i32 @clps_readl(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = sub i32 %6, 16
  %8 = shl i32 1, %7
  %9 = load i32, i32* %3, align 4
  %10 = or i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @INTMR2, align 4
  %13 = call i32 @clps_writel(i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @clps_readl(i32) #1

declare dso_local i32 @clps_writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
